tests/NormalTests/paczka1/small_fuzzy/20606013.err
Error in line 6: ej1p A736 76,3
Error in line 1: A941 A736 97,8
Error in line 10: gKDGvh1Ub5 A941 36,1
